# blender

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yaml
docs/human/: commands.md
docs/llm/: bridge-protocol.md  command-spec.md  error-codes.md  response-schema.json
src/harness_blender/: __main__.py
src/harness_blender/bridge/: blender_runner.py  client.py  operations.py  protocol.py  server.py
src/harness_blender/cli/: main.py
tests/: test_cli_contract.py  test_golden_version.py  test_precision_integration.py
