[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessgg-blender"
version = "0.2.0"
description = "Bridge-first CLI for Blender automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harness" }]
keywords = ["blender", "3d", "automation", "ai-agent", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = ["typer>=0.12.3"]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "twine>=5.1.1"
]

[project.scripts]
harness-blender = "harness_blender.cli.main:main"

[project.urls]
Homepage = "https://github.com/harnessgg/harness-blender"
Repository = "https://github.com/harnessgg/harness-blender"
Documentation = "https://github.com/harnessgg/harness-blender/tree/main/docs"
Issues = "https://github.com/harnessgg/harness-blender/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
